--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <div class="imgBx">
                     <img src="image/64301270041@0.jpg">
                 </div>
-                <h2 id="namest">Baramee Phumphan<br></h2><h2 id="position"><span>Mechatronicain</span></h2>
+                <h2 id="namest">บารมี ภูมิพันธ์<br></h2><h2 id="position"><span>ช่างแมคคาทรอนิกส์</span></h2>
             </div>
             <div class="contactInfo">
-                <h3 class="title" id="contact">ContactInfo</h3>
+                <h3 class="title" id="contact">ข้อมูลติดต่อ</h3>
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
@@ -32,52 +32,52 @@
                         </li>
                     <li>
                         <span class="icon"><i class="fa fa-graduation-cap" aria-hidden="true"></i></span>
-                        <span class="text" id="diploma">Diploma Degree</span>
+                        <span class="text" id="diploma">ประกาศนียบัตรวิชาชีพชั้นสูง</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text" id="live">1268 Mittraphap Road<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nai Meung Meung <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Nakhonrahasima</span>
+                        <span class="text" id="live">1268 ถนน มิตภาพ<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ตำบลในเมือง อำเภอเมือง <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;จังหวัดนครราชสีมา</span>
                     </li>
                 </ul>
             </div>
             <div class="contactInfo eduction">
-                <h3 class="title" id="eduction">Eduction</h3>
+                <h3 class="title" id="eduction">การศึกษา</h3>
                 <ul>
                     <li>
                         <h5 id="year3">2021 - 2023</h5>
-                        <h4 id="eduction3">Diploma Degree</h4>
-                        <h4 id="college2">Nakhonrahasima Technical College</h4>
+                        <h4 id="eduction3">ประกาศนียบัตรวิชาชีพชั้นสูง</h4>
+                        <h4 id="college2">วิทยาลัยเทคนิคนครราชสีมา</h4>
                     </li>
                     <li>
                         <h5 id="year2">2018 - 2021</h5>
-                        <h4 id="eduction2">Vocational Certificate</h4>
-                        <h4 id="college1">Nakhonrahasima Technical College</h4>
+                        <h4 id="eduction2">ประกาศนียบัตรวิชาชีพ</h4>
+                        <h4 id="college1">วิทยาลัยเทคนิคนครราชสีมา</h4>
                     </li>
                     <li>
                         <h5 id="year1">2015 - 2018</h5>
-                        <h4 id="eduction1">Ninth Grade</h4>
-                        <h4 id="school">Ubolratanarajkanyaratchawitthayalai Nakhonratchasima School</h4>
+                        <h4 id="eduction1">มัธยมศึกษาปีที่ 3</h4>
+                        <h4 id="school">อุบลรัตนราชกัญญาราชวิทยาลัยนครราชสีมา</h4>
                     </li>
                 </ul>
             </div>
 
             <div class="contactInfo language">
-                <h3 class="title" id="languages">Languages</h3>
+                <h3 class="title" id="languages">ภาษา</h3>
                 <ul>
                     <li>
-                        <span class="text" id="language">English</span>
+                        <span class="text" id="language">ภาษาอังกฤษ</span>
                         <span class="percent"><div style="width: 70%;"></div></span>
                     </li><br>
                     <li>
-                        <h3 class="title" id="skills">Mechatronic Skills</h3>
+                        <h3 class="title" id="skills">ความสามารถ</h3>
                         <div class="skills">
-                            <span class="text" id="program">Programming: C++, C#, HTML5, CSS</span>
+                            <span class="text" id="program">ภาษาโปรแกรม: C++, C#, HTML5, CSS</span>
                             <span class="percent"><div style="width: 85%;"></div></span>
-                            <span class="text" id="electric">Electrical Skill</span>
+                            <span class="text" id="electric">ทางด้านไฟฟ้า</span>
                             <span class="percent"><div style="width: 90%;"></div></span>
-                            <span class="text" id="proplc">PLC Skill</span>
+                            <span class="text" id="proplc">ทาด้านPLC</span>
                             <span class="percent"><div style="width: 80%;"></div></span>
-                            <span class="text" id="autocad">Design: AutoCAd</span>
+                            <span class="text" id="autocad">ทางด้านการออกแบบด้วย AutoCad</span>
                             <span class="percent"><div style="width: 75%;"></div></span>
                         </div><br>
                     </li>
@@ -87,60 +87,42 @@
 
         <div class="right_side">
             <div class="about">
-                <h2 class="title2" id="titlepf">Profile</h2>
+                <h2 class="title2" id="titlepf">โปรไฟล์</h2>
                 <p id="titlepf2">
-                    I am an mechatronic specialized in circuit design and development, boasting a wealth of experience in various projects that demand an in-depth understanding of system capabilities, as well as the adeptness to tackle intricate issues.<br>
-                    Proficient in designing electrical circuits and programming PLCs<br>
-                    I am both a creator and an innovator of products tailored to meet diverse customer and industry needs.<br>
+                    ผมเป็นช่างแมคคาทรอนิกส์ที่เชี่ยวชาญในการออกแบบวงจรด้วยAutoCadและการพัฒนาจากประสบการณ์มากมายในโครงการต่าง ๆ ที่ต้องการความเข้าใจลึกซึ้งเกี่ยวกับความสามารถของระบบ รวมถึงความเชี่ยวชาญในการแก้ไขปัญหาที่ซับซ้อน<br>และเชี่ยวชาญในการออกแบบตู้ไฟฟ้าและโปรแกรม PLC<br>ให้เหมาะสมกับความต้องการของลูกค้าและอุตสาหกรรมที่หลากหลาย<br>
                 </p>
             </div>
             <div class="about">
-                <h2 class="title2" id="titlets">Technical Skills</h2>
-                    <h3 style="color: darkgray" id="abilities">Abilities:</h3>
+                <h2 class="title2" id="titlets">ทักษะทางเทคนิค</h2>
+                    <h3 style="color: darkgray" id="abilities">ความสามารถ:</h3>
                     <div class="activities"><br>
-                        <span class="text" id="electrical"><b>&#x2022;Electrical Expertise</b></span><br>
+                        <span class="text" id="electrical"><b>&#x2022;ความเชี่ยวชาญด้านไฟฟ้า</b></span><br>
                         <span class="text">
                             <p id="electricals">
-                                &nbsp;&nbsp;I bring expertise as an accomplished electrical control &nbsp;&nbsp;panel designer adept at utilizing AutoCAD for circuit &nbsp;&nbsp;design and meticulous wiring. 
-                                My specialization lies in &nbsp;&nbsp;crafting visually captivating and meticulously organized &nbsp;&nbsp;interior designs for control panels. 
-                                My proficiency &nbsp;&nbsp;extends to a profound understanding of electrical &nbsp;&nbsp;components and precision in energy efficiency &nbsp;&nbsp;calculations, all underscored by a strong commitment &nbsp;&nbsp;to safety and user convenience.
+                                &nbsp;&nbsp;ผมมีความเชี่ยวชาญในด้านการออกแบบแผงควบคุมไฟฟ้าโดยใช้ &nbsp;&nbsp;AutoCADสำหรับออกแบบวงจรและการต่อสายไฟอย่างพิถีพิถัน<br>&nbsp;&nbsp;ในการออกแบบภายในตู้ที่เป็นระเบียบเรียบร้อยความเชี่ยวชาญของผมยัง<br>&nbsp;&nbsp;ครอบคลุมถึงความเข้าใจลึกซึ้งในองค์ประกอบทางไฟฟ้าและความ<br>&nbsp;&nbsp;แม่นยำในการคำนวณการใช้อุปกรณ์ไฟฟ้าทั้งหมดยึกความถูกต้องกับ<br>&nbsp;&nbsp;ความปลอดภัยและความสะดวกสบายของผู้ใช้เป็นหลัก
                             </p><br>
                         </span>
-                        <span class="text" id="plcpro"><b>&#x2022;PLC Programming</b></span><br>
+                        <span class="text" id="plcpro"><b>&#x2022;การเขียนโปรแกรมPLC</b></span><br>
                         <span class="text">
                             <p id="plcpros">
-                                &nbsp;&nbsp;I possess extensive knowledge and experience in PLC &nbsp;&nbsp;programming. 
-                                I specialize in designing and improving &nbsp;&nbsp;control systems with a strong emphasis on safety and &nbsp;&nbsp;efficiency standards. 
-                                These skills are crucial for &nbsp;&nbsp;producing high-quality products and systems in the &nbsp;&nbsp;industrial sector. My expertise in PLC programming also &nbsp;&nbsp;includes optimizing user-friendly system operations. &nbsp;&nbsp;Additionally, 
-                                I excel in collaborating with others to create &nbsp;&nbsp;modern and efficient products that meet market &nbsp;&nbsp;demands effectively.
+                                &nbsp;&nbsp;ผมมีความรู้และประสบการณ์ในการเขียนโปรแกรมPLCอย่างเต็มที่<br>&nbsp;&nbsp;ผมเชี่ยวชาญในการออกแบบและปรับปรุงระบบควบคุมที่ให้ความสำคัญ<br>&nbsp;&nbsp;กับมาตรฐานความปลอดภัยและประสิทธิภาพทักษะเหล่านี้เป็นสิ่งสำคัญ<br>&nbsp;&nbsp;ในการผลิตผลิตภัณฑ์และระบบที่มีคุณภาพดีในเขตอุตสาหกรรม<br>&nbsp;&nbsp;ความเชี่ยวชาญของผมในการเขียนโปรแกรมPLCยังรวมการทำงานของ<br>&nbsp;&nbsp;ระบบที่ผู้ใช้งานใช้ได้อย่างราบรื่นอีกทั้งผมมีความสามารถในการร่วมมือ<br>&nbsp;&nbsp;กับผู้อื่นเพื่อสร้างผลิตภัณฑ์ที่ทันสมัยที่ตอบโจทย์ตลาดอย่าง<br>&nbsp;&nbsp;มีประสิทธิภาพ
                             </p><br>
                         </span>
-                        <span class="text" id="prol"><b>&#x2022;Programming Languages</b></span><br>
+                        <span class="text" id="prol"><b>&#x2022;ความเชียวชาญทางด้านภาษาโปรแกรม</b></span><br>
                         <span class="text">
                             <p id="prols">
-                                &nbsp;&nbsp;C#: Proficient in C# for versatile software development.<br>
-                                &nbsp;&nbsp;C++: Experienced in C++ programming for diverse &nbsp;&nbsp;applications.<br>
-                                &nbsp;&nbsp;HTML5: Expertise in crafting interactive web content.<br>
-                                &nbsp;&nbsp;CSS: Adept at creating visually appealing web designs.<br>
+                                &nbsp;&nbsp;C#: ผมมีความเชี่ยวชาญในการใช้งานC#สำหรับการพัฒนาซอฟต์แวร์<br>&nbsp;&nbsp;ที่หลากหลายประเภท.<br>&nbsp;&nbsp;C++: ผมมีประสบการณ์ในการเขียนโปรแกรมด้วยC++สำหรับการ<br>&nbsp;&nbsp;พัฒนาแอปพลิเคชันที่หลากหลายในการใช้งาน<br>&nbsp;&nbsp;HTML5: ผมมีความเชี่ยวชาญในการสร้างเนื้อหาเว็บแบบแอ็คทิฟที่<br>&nbsp;&nbsp;สามารถปฏิสัมพันธ์ได้<br>&nbsp;&nbsp;CSS: ผมมีความสามารถในการสร้างการออกแบบเว็บที่มีลักษณะที่ดึงดูด<br>&nbsp;&nbsp;ตา<br>
                             </p><br>
                         </span>
-                        <span class="text" id="award"><b>&#x2022;Award</b></span><br>
+                        <span class="text" id="award"><b>&#x2022;รางวัล</b></span><br>
                         <span class="text">
                             <p id="awards">
-                                &nbsp;&nbsp;<b>National Vocational Skills Competition</b><br>
-                                &nbsp;&nbsp;Mechatronics and Robotics Skills, 1st Place at the &nbsp;&nbsp;Diploma Level
+                                &nbsp;&nbsp;การแข่งขันทักษะวิชาชีพทักษะเมคคาทรอนิกส์และหุ่นยนต์ปวส.ระดับ<br>&nbsp;&nbsp;ชาติ</b><br>&nbsp;&nbspรางวัลชนะเลิสอันดับที่1
                             </p><br>
                         </span>
                     </div>
             </div>
-            <ul>
-                <label for="language-select" style="color: rgb(255, 255, 255);"><i class='bx bx-world'></i></label>
-                <select name="languages" id="language-select" onchange="changeLanguage()">
-                    <option value="english">English</option>
-                    <option value="thai" label="ภาษาไทย">Thai</option>
-                </select>
-            </ul>
         </div>
     </div>
 </body>
-</html>
+</html
